--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,21 +1,24 @@
 ---
 # default layout
 ---
-<!doctype html>
+
+<!DOCTYPE html>
 <html class="no-js" lang="en">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>{% if page.title %}{{page.title}} - {% endif %}{{site.title}}</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-{% seo %}
-<link rel="stylesheet" href="/css/styles.css">
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700' rel='stylesheet' type='text/css'>
-</head>
-<body>
-<div class="container">
-{{content}}
-</div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/{{site.jquery}}/jquery.js"></script>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <title>{% if page.title %}{{page.title}} - {% endif %}{{site.title}}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    {% seo %}
+    <link rel="stylesheet" href="/css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700"
+      rel="stylesheet"
+      type="text/css"
+    />
+  </head>
+  <body>
+    <div class="container">{{content}}</div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/{{site.jquery}}/jquery.js"></script>
+  </body>
 </html>
