--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,9 +1,9 @@
 ---
 ---
 
-@import 'mixins';
-@import 'vars';
-@import 'reset';
-@import 'type';
-@import 'scaffolding';
-@import 'layout';
+@import "mixins";
+@import "vars";
+@import "reset";
+@import "type";
+@import "scaffolding";
+@import "layout";
